{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 47,
  "lineage": "24031576-0c71-146b-0fbb-557eda934899",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670130355384:route-table/rtb-0ea73a672efd9a6e4",
            "default_route_table_id": "rtb-0ea73a672efd9a6e4",
            "id": "rtb-0ea73a672efd9a6e4",
            "owner_id": "670130355384",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4626410eeac40bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dev-main-rtb"
            },
            "tags_all": {
              "Name": "Dev-main-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0584fcdf8afefee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-app-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d265258e800105",
            "arn": "arn:aws:ec2:us-east-1:670130355384:instance/i-0565a91d66242205f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0565a91d66242205f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myapp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0826ec669b16bc784",
            "private_dns": "ip-10-0-0-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.51",
            "public_ip": "44.203.237.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4e3e7381d0445d1",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04452408d924a3dbb",
            "tags": {
              "Name": "Dev-server"
            },
            "tags_all": {
              "Name": "Dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e05df991da2e38ad"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.myapp-sg",
            "aws_subnet.my-app-subnet",
            "aws_vpc.my-vpc",
            "data.aws_ami.amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-app-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670130355384:internet-gateway/igw-0e4626410eeac40bf",
            "id": "igw-0e4626410eeac40bf",
            "owner_id": "670130355384",
            "tags": {
              "Name": "Dev-igw"
            },
            "tags_all": {
              "Name": "Dev-igw"
            },
            "vpc_id": "vpc-0a0584fcdf8afefee"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670130355384:security-group/sg-0e05df991da2e38ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e05df991da2e38ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "156.160.217.13/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-app-sg",
            "name_prefix": "",
            "owner_id": "670130355384",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-my-app-sg"
            },
            "tags_all": {
              "Name": "Dev-my-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0584fcdf8afefee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670130355384:subnet/subnet-04452408d924a3dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04452408d924a3dbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670130355384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-subnet"
            },
            "tags_all": {
              "Name": "Dev-subnet"
            },
            "vpc_id": "vpc-0a0584fcdf8afefee"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670130355384:vpc/vpc-0a0584fcdf8afefee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055c3cd373b7a008f",
            "default_route_table_id": "rtb-0ea73a672efd9a6e4",
            "default_security_group_id": "sg-094a7cafb2536f4f8",
            "dhcp_options_id": "dopt-07d74f75a185a6020",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0584fcdf8afefee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea73a672efd9a6e4",
            "owner_id": "670130355384",
            "tags": {
              "Name": "Dev-vpc"
            },
            "tags_all": {
              "Name": "Dev-vpc"
            }
          }
        }
      ]
    }
  ]
}